# crocodiledb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: skiplist.rs
components/admin/: Cargo.toml
components/admin/src/: client_handle.rs  lib.rs  readiness.rs
components/app/: Cargo.toml
components/error/: Cargo.toml
components/error/src/: error.rs
components/kv/: Cargo.toml
components/log/: Cargo.toml
components/log/src/: lib.rs
components/metrics/: Cargo.toml
components/metrics/src/: lib.rs  prom.rs
components/raft/: Cargo.toml
components/raft/src/: config.rs  lib.rs  node.rs
components/signal/: Cargo.toml
components/signal/src/: lib.rs
components/sql/: Cargo.toml
components/sql/src/: lib.rs
components/storage/: Cargo.toml
components/storage/src/: config.rs  encoding.rs  factory.rs  lib.rs  memory.rs
components/storage/src/btree/: mod.rs
components/storage/src/slsm/: compaction.rs  fence.rs  memtable.rs  mod.rs  table.rs
components/storage/src/slsm/skl/: slist.rs
components/storage/src/wisclsm/: mod.rs
components/tracing/: Cargo.toml
components/tracing/src/: level.rs  lib.rs  tasks.rs
components/transaction/: Cargo.toml
components/transaction/src/: lib.rs  mvcc.rs
components/utils/: Cargo.toml
components/utils/src/: lib.rs  priority_queue.rs
config/: crocodiledb.yaml
crocodiledb/: Cargo.toml
crocodiledb/src/: main.rs
docs/: architecture.md
skiplist/: Cargo.toml
skiplist/src/: arena.rs  key.rs  lib.rs  slist.rs
skiplist/tests/: test_skip_list.rs
src/: batch.rs  compaction.rs  config.rs  db.rs  error.rs  iterator.rs  kv.rs  lib.rs  main.rs  memtable.rs  opt.rs  signal.rs  skiplist.rs  snapshot.rs  sstable.rs  storage.rs  table_cache.rs
src/admin/: client_handle.rs  mod.rs  readiness.rs
src/bloom/: mod.rs
src/cache/: lru_cache.rs  mod.rs
src/db/: filename.rs  format.rs  iterator.rs
src/engine/: bloom.rs  mod.rs
src/engine/skl/: arena.rs  mod.rs  skl.rs
src/filter/: bloom.rs  cuckoo.rs  mod.rs
src/log/: log_reader.rs  log_writer.rs  mod.rs
src/memtable/: arena.rs  key.rs  mod.rs  skiplist.rs
src/metrics/: mod.rs  prom.rs
src/raft/: config.rs  error.rs  mod.rs  node.rs  serve.rs
src/sql/: mod.rs
src/sql/types/: mod.rs
src/sstable/: block.rs  builder.rs  filter_block.rs  format.rs
src/storage/: config.rs  encoding.rs  error.rs  file.rs  lsm_storage.rs  memory.rs  mod.rs  mvcc.rs  storage.rs  types.rs
src/storage/engine/: error.rs  memory.rs  mod.rs  table.rs
src/storage/engine/btree/: mod.rs
src/storage/engine/lsm/: bloom.rs  mod.rs  skl.rs
src/storage/engine/lsm/skl/: arena.rs  mod.rs  slist.rs  test_skip_list.rs
src/storage/engine/skl/: skl.rs
src/storage/engine/slsm/: compaction.rs  fence.rs  memtable.rs  mod.rs  slsm.rs  table.rs
src/storage/engine/slsm/skl/: mod.rs  slist.rs
src/storage/engine/wisclsm/: mod.rs  wisc.rs
src/storage/log/: mod.rs
src/storage/tp/txn/: mod.rs
src/storage/transaction/: mod.rs  mvcc.rs
src/storage/util/: mod.rs  priority_queue.rs
src/tp/: mod.rs
src/tp/txn/: mod.rs
src/tracing/: level.rs  mod.rs  tasks.rs
src/util/: arena.rs  coding.rs  comparator.rs  crc32.rs  hash.rs  lru_cache.rs  mod.rs  reporter.rs
src/version/: mod.rs  version_edit.rs  version_set.rs
src/wal/: mod.rs  reader.rs  writer.rs
tests/: test_skip_list.rs  test_storage.rs
tests/mvcc/: mod.rs  test_mvcc.rs
