[package]
name = "crocodile"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "crocodiledb",
    "components/error",
    "components/kv",
    "components/metrics",
    "components/raft",
    "components/sql",
    "components/storage",
    "components/utils",
    "components/log",
]

[profile.dev]
debug = false
[profile.test]
debug = false