[package]
name = "crocodiledb"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

[[bin]]
name = "crocodile"
path = "bin/corcodiledb.rs"

[dependencies]
thiserror = "1.0.29"
tokio = { version = "1", features = ["full"] }
tracing-error = "0.1.2"
tracing-subscriber = "0.2.24"


[dev-dependencies]
