[package]
name = "crocodiledb"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

[[bin]]
name = "crocodile"
path = "bin/corcodiledb.rs"

[dependencies]
bytes = "1.1.0"
crc32fast = "1.2.1"
fs2 = "0.4.3"
rand = "0.8.4"
thiserror = "1.0.29"
tokio = { version = "1", features = ["rt", "net"] }
log = "0.4.6"
tracing-error = "0.1.2"
tracing-subscriber = "0.2.24"
snap = "1.0.0"
num-derive = "0.3"
num-traits = "0.2"
fxhash = "0.2.1"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
harness = false
name = "skiplist"
path = "benches/skiplist.rs"
