[package]
name = "crocodiledb"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crocodiledb-components-app = { path = "../components/app" }
tokio = { version = "1", features = ["macros", "sync", "parking_lot", "signal"] }
tracing = "0.1.23"