[package]
name = "skiplist"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.7"
bytes = "1.0"

[dev-dependencies]
yatp = { git = "https://github.com/tikv/yatp.git" }
criterion = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.4.0"