[package]
name = "crocodiledb-components-admin"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crocodiledb-components-tracing = {path = "../tracing"}
crocodiledb-components-metrics = {path = "../metrics"}
hyper = { version = "0.14.2", features = ["http1", "http2", "client", "server"] }
tokio = { version = "1", features = ["macros", "sync", "parking_lot", "signal"] }
futures = "0.3.9"
http = "0.2"
tracing = "0.1.23"

[dependencies.tower]
version = "0.4"
# disable tower's tracing `log` integration for performance reasons, since we
# will consume tower's traces as traces.
default-features = false
features = [
    "buffer",
    "make",
    "spawn-ready",
    "timeout",
    "util",
]