[package]
name = "crocodiledb-components-error"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = "~1.0.91"
serde_derive = "~1.0.91"
bincode = "~1.3.1"