[package]
name = "crocodiledb-components-metrics"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deflate = { version = "0.7.18", features = ["gzip"] }
hyper = { version = "0.14.2", features = ["http1", "http2", "client", "server"] }
