[package]
name = "crocodiledb-components-storage"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crocodiledb-components-error = {path = "../error"}
crocodiledb-components-utils = {path = "../utils"}
rand = "0.7"
serde = "~1.0.91"
serde_derive = "~1.0.91"
serde_json = "1"
bytes = "1.0.1"
crossbeam-channel = "0.5.0"
tracing = "0.1.23"
memmap = "0.7"