[package]
name = "crocodiledb-components-tracing"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.2", features = ["http1", "http2", "client", "server"] }
futures = "0.3.9"
http = "0.2"
tracing = "0.1.23"
serde_json = "1"
html-escape = "0.2.5"
tokio-trace = { git = "https://github.com/hawkw/tokio-trace", rev = "7d5998e7cb3beb06ada5983675319dc4853576c5", features = ["serde"] }

[dependencies.tracing-subscriber]
version = "0.2.16"
# we don't need `chrono` time formatting or ANSI colored output
default-features = false
features = ["env-filter", "fmt", "smallvec", "tracing-log", "json", "parking_lot"]