[package]
name = "crocodiledb-components-transaction"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crocodiledb-components-error = {path = "../error"}
crocodiledb-components-storage = {path = "../storage"}
bincode = "~1.3.1"
serde = "~1.0.91"
serde_derive = "~1.0.91"
serde_json = "1"
